# app

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
assets/styling/: complex.css  main.css  navbar.css  simple.css  style.css
docs/: index.html
docs/assets/: artimonist-0ff00f2e92ce051a.js  artimonist-0ff00f2e92ce051a.js.br  artimonist_bg-83cb519f29d8b5c4.wasm  artimonist_bg-83cb519f29d8b5c4.wasm.br  artimonist_bg-9299e374bc9094fa.wasm  artimonist_bg-9299e374bc9094fa.wasm.br  artimonist_bg-c99c36adcae44bea.wasm  artimonist_bg-c99c36adcae44bea.wasm.br  artimonist_bg-eeb7ec9329a78e9e.wasm  artimonist_bg-eeb7ec9329a78e9e.wasm.br  artimonist_bg-f2bc1e6221679192.wasm  artimonist_bg-f2bc1e6221679192.wasm.br  artimonist_bg-f522f3438f841623.wasm  artimonist_bg-f522f3438f841623.wasm.br  artimonist_bg-fe3782ec5d0a6da4.wasm  artimonist_bg-fe3782ec5d0a6da4.wasm.br  complex-283cd09a447f43b0.css.br  favicon-a2b22d27d339b088.ico.br  main-5b18a5630930d695.css  navbar-aa87edfeed6bcd28.css.br  simple-6d7e9c4f7d5d1bc1.css  simple-6d7e9c4f7d5d1bc1.css.br  style-084277909b93f495.css  style-084277909b93f495.css.br  theme-022506d826464cab.css.br
docs/public/: index.html
src/: index.html  main.js  main.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: complex.rs  complex_diagram.js  complex_diagram.mjs  mod.rs  result-tab.mjs  simple.rs  simple_diagram.js  simple_diagram.mjs  unicode_input.mjs  unicode_password.js  unicode_password.mjs
src/demo/: main.mjs
src/views/: complex.rs  home.rs  mod.rs  navbar.rs  simple.rs
(+19 files in other folders)
