[package]
name = "Artimonist"
version = "0.1.0"
description = "Artimonist - A tool for generating mnemonics and wallets."
authors = ["Artimonist <artimonist@gmail.com>"]
homepage = "https://artimonist.org/"
repository = "https://github.com/artimonist/artimonist-web/"

license = "MIT"
keywords = ["bitcoin", "mnemonic", "wallet", "crypto"]
categories = ["cryptography"]
# rust-version = "1.84.0"
edition = "2021"

[lib]
name = "artimonist_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

